--- a/Infrastructure.PersistenceModel.MongoDB/Infrastructure.PersistenceModel.MongoDB.csproj
+++ b/Infrastructure.PersistenceModel.MongoDB/Infrastructure.PersistenceModel.MongoDB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0-preview.6.24327.7" />
+      <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.27.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.27.0" />
     </ItemGroup>
